Better split between allocators and sessions. Now public API deals only in allocators.